--- a/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_skills_extractor_skillner_ner.ipynb
+++ b/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_skills_extractor_skillner_ner.ipynb
@@ -419,6 +419,13 @@
     }
    ],
    "source": [
+    "# The first line of code defines a list of stop words, which are words that are commonly used in the English language but don't hold a lot of meaning, such as \"the\" or \"and\" etc.\n",
+    "# The second line of code defines a list of characters that should be removed from the job titles, such as punctuation marks and digits. The third line of code defines a function that takes in a dataframe as an argument. \n",
+    "# This function tokenizes the job titles, which means it splits them up into individual words. It also removes any stop words or punctuation marks. Finally, it detokenizes the job titles, which means it puts them back together into a single string. \n",
+    "# The fourth line of code applies this function to the dataframe. The fifth line of code prints the number of rows in the dataframe. The sixth line of code prints the first two rows of the dataframe.stop_words = stopwords.words('english')\n",
+    "\n",
+    "\n",
+    "\n",
     "def tokenazing_job_description(dataframe):\n",
     "\n",
     "    stop_words = stopwords.words('english')\n",
@@ -428,6 +435,8 @@
     "    dataframe['job_desc_clean'] = dataframe['job_desc_token'].apply(TreebankWordDetokenizer().detokenize)\n",
     "    # dataframe['job_desc_clean'] =dataframe.apply(lambda row: lemmatize.lemmatize(row['job_desc_clean']), axis=1)\n",
     "    return dataframe\n",
+    "\n",
+    "    \n",
     "df = tokenazing_job_description(df)\n",
     "df.head(5)"
    ]
