updated file path

--- a/01_Scraping/01_01_Scraping_example_notebook_datacareer_html.ipynb
+++ b/01_Scraping/01_01_Scraping_example_notebook_datacareer_html.ipynb
@@ -433,7 +433,7 @@
    "outputs": [],
    "source": [
     "# This Code is is saving the resulting DataFrame to a CSV file.\n",
-    "df_parsing_jobs_html.to_csv('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/01_Scraping/Scraped data/website_1/jobs_website_1_raw.csv',index=False)\n"
+    "df_parsing_jobs_html.to_csv('Master/01_Scraping/Scraped data/website_1/jobs_website_1_raw.csv',index=False)\n"
    ]
   }
  ],
