--- a/01_Scraping/01_02_Scraping_example_notebook_it_jobs_json.ipynb
+++ b/01_Scraping/01_02_Scraping_example_notebook_it_jobs_json.ipynb
@@ -41,7 +41,7 @@
     "# The \"soup\" variable stores the BeautifulSoup object containing the parsed HTML from the \"jobs.html\" file.\n",
     "\n",
     "\n",
-    "with open(\"C:/Users/Aleksej Aikov/Desktop/Enablement/Master/01_Scraping/example_json_scraping_it_jobs/jobs.html\",encoding=\"utf8\") as file:\n",
+    "with open(\"Master/01_Scraping/example_json_scraping_it_jobs/jobs.html\",encoding=\"utf8\") as file:\n",
     "    soup = BeautifulSoup(file, 'html.parser')"
    ]
   },
