--- a/02_Union different sources/02_union_data/02_union_notebook.ipynb
+++ b/02_Union different sources/02_union_data/02_union_notebook.ipynb
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "df_web1 = pd.concat(map(pd.read_csv, glob.glob('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/02_Union different sources/02_website_1/*.csv')))\n",
+    "df_web1 = pd.concat(map(pd.read_csv, glob.glob('Master/02_Union different sources/02_website_1/*.csv')))\n",
     "df_web1.rename(columns={'jobTitel': 'jobTitle'}, inplace=True)\n",
     "print(df_web1.shape)\n",
     "df_web1.head(5)"
@@ -295,7 +295,7 @@
     }
    ],
    "source": [
-    "df_web2 = pd.concat(map(pd.read_csv, glob.glob('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/02_Union different sources/02_website_2/*.csv')))\n",
+    "df_web2 = pd.concat(map(pd.read_csv, glob.glob('Master/02_Union different sources/02_website_2/*.csv')))\n",
     "print(df_web2.shape)\n",
     "df_web2.head(5)"
    ]
@@ -578,7 +578,7 @@
     }
    ],
    "source": [
-    "df_web4 = pd.concat(map(pd.read_csv, glob.glob('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/02_Union different sources/02_website_4/*.csv')))\n",
+    "df_web4 = pd.concat(map(pd.read_csv, glob.glob('Master/02_Union different sources/02_website_4/*.csv')))\n",
     "df_web4.rename(columns={'posDate': 'postDate'}, inplace=True)\n",
     "print(df_web4.shape)\n",
     "df_web4.head(5)"
@@ -1002,8 +1002,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "union_df.to_csv('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/02_Union different sources/02_union_data/02_union_data.csv', index=False)\n",
-    "union_df.to_csv('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/03_Cleaning data/03_data_for_cleaning.csv', index=False)"
+    "union_df.to_csv('Master/02_Union different sources/02_union_data/02_union_data.csv', index=False)\n",
+    "union_df.to_csv('Enablement/Master/03_Cleaning data/03_data_for_cleaning.csv', index=False)"
    ]
   }
  ],
