--- a/03_Cleaning data/03_cleaning_data.ipynb
+++ b/03_Cleaning data/03_cleaning_data.ipynb
@@ -36,7 +36,7 @@
     "# This code loads a CSV file into a Pandas DataFrame, then prints the number of rows and columns in the DataFrame.\n",
     "\n",
     "\n",
-    "df = pd.read_csv('03_data_for_cleaning.csv',encoding='utf-8')\n",
+    "df = pd.read_csv('Master/03_Cleaning data/03_data_for_cleaning.csv',encoding='utf-8')\n",
     "print(df.shape)"
    ]
   },
@@ -2380,7 +2380,7 @@
    "source": [
     "# read in the translated data\n",
     "\n",
-    "df_translated = pd.read_excel('03_02_cleaned_and_translated_dataset.xlsx', sheet_name='Data') # read in the translated data\n",
+    "df_translated = pd.read_excel('Master/03_Cleaning data/03_02_cleaned_and_translated_dataset.xlsx', sheet_name='Data') # read in the translated data\n",
     "df_translated.shape"
    ]
   },
@@ -2396,8 +2396,8 @@
     "# The file is encoded in UTF-8\n",
     "\n",
     "\n",
-    "df_translated.to_csv('03_01_02_cleaned_and_translated_dataset.csv', index=False,encoding='utf-8')\n",
-    "df_translated.to_csv('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_cleaned_and_trunslated_dataset.csv', index=False,encoding='utf-8')"
+    "df_translated.to_csv('Master/03_Cleaning data/03_01_02_cleaned_and_translated_dataset.csv', index=False,encoding='utf-8')\n",
+    "df_translated.to_csv('Master/04_Analysis/04_01_cleaned_and_trunslated_dataset.csv', index=False,encoding='utf-8')"
    ]
   }
  ],
