--- a/04_Analysis/04_01_custom_analysis/04_01_eda_nltk_pandas_for_tableau_analysis.ipynb
+++ b/04_Analysis/04_01_custom_analysis/04_01_eda_nltk_pandas_for_tableau_analysis.ipynb
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_02_ensi_skills_extraction/04_01_custom_analysis/04_01_cleaned_and_trunslated_dataset.csv\", encoding = \"utf-8\")\n",
+    "df = pd.read_csv(\"Master/04_Analysis/04_02_ensi_skills_extraction/04_01_custom_analysis/04_01_cleaned_and_trunslated_dataset.csv\", encoding = \"utf-8\")\n",
     "df.head(5)"
    ]
   },
@@ -1818,9 +1818,9 @@
     "\n",
     "\n",
     "df_base = df[['text_id','jobTitle','role','level','jobDescription','Location','Company','Industry']]\n",
-    "df_base.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/00_tableau_base_data.xlsx',index=False)\n",
+    "df_base.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/00_tableau_base_data.xlsx',index=False)\n",
     "df_original_salary = df_original_salary[['text_id','salary_low','salary_high','salary_mean']]\n",
-    "df_original_salary.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/02_tableau_original_salary.xlsx',index=False)\n",
+    "df_original_salary.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/02_tableau_original_salary.xlsx',index=False)\n",
     "\n",
     "\n",
     "df_furher_analysis = df.copy()\n",
@@ -3284,7 +3284,7 @@
     "\n",
     "df_degree_required = df_furher_analysis[['text_id', 'degree_required', 'bachelor', 'master', 'phd','mathematics', 'statistics', 'physics', 'chemistry', 'biology', 'economics', 'business', 'computer_science', \n",
     "                        'economic_engineering', 'business_informatics', 'information_management', 'information_technology', 'computer_engineering', 'computer_science engineering']]\n",
-    "df_degree_required.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/04_tableau_analysis_degree_required.xlsx', index=False)"
+    "df_degree_required.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/04_tableau_analysis_degree_required.xlsx', index=False)"
    ]
   },
   {
@@ -3331,7 +3331,7 @@
     "                                            'chartblocks','power_bi','tableau','google_charts','qlik','chartblocks']].copy()\n",
     "df_visualization_skills.head(5)\n",
     "\n",
-    "df_visualization_skills.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/05_tableau_analysis_visualization_skills.xlsx',index=False)\n"
+    "df_visualization_skills.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/05_tableau_analysis_visualization_skills.xlsx',index=False)\n"
    ]
   },
   {
@@ -3432,7 +3432,7 @@
     "df_programming_languages = df_programming_languages[['text_id','python','java', 'javascript', 'sql', 'html','matlab', 'sas', 'spss', 'stata','scala','spark','sparksql','pyspark']].copy()\n",
     "df_programming_languages.head(5)\n",
     "\n",
-    "df_programming_languages.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/06_tableau_analysis_programming_languages.xlsx',index=False)"
+    "df_programming_languages.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/06_tableau_analysis_programming_languages.xlsx',index=False)"
    ]
   },
   {
@@ -3511,7 +3511,7 @@
     "\n",
     "df_platforms = df_platforms[['text_id','aws','azure','snowflake','databricks','google']].copy()\n",
     "df_platforms.head(5)\n",
-    "df_platforms.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/07_tableau_analysis_platforms.xlsx',index=False)"
+    "df_platforms.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/07_tableau_analysis_platforms.xlsx',index=False)"
    ]
   },
   {
@@ -3590,7 +3590,7 @@
     "\n",
     "df_technologies.head(5)\n",
     "\n",
-    "df_technologies.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/08_tableau_analysis_technologies.xlsx',index=False)\n"
+    "df_technologies.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/08_tableau_analysis_technologies.xlsx',index=False)\n"
    ]
   },
   {
@@ -3729,7 +3729,7 @@
     "                                'teamwork', 'collaboration','critical thinking','attention to detail','interpersonal','presentation_skills',\n",
     "                                'critical_thinking','problem_solving','decision_making','attention_to_detail','analytical_skills']]\n",
     "\n",
-    "df_softskill.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/09_tableau_analysis_softskills.xlsx',index=False)"
+    "df_softskill.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/09_tableau_analysis_softskills.xlsx',index=False)"
    ]
   },
   {
@@ -3818,7 +3818,7 @@
     "\n",
     "df_ml_skills = df_ml_skills[['text_id','ensemble_model', 'decision_tree', 'pca_svd', 'naive_bayes', 'random_forest', 'k_means', 'logistic_regression', \n",
     "                            'linear_regression', 'predictive_modeling', 'machine_learning']]\n",
-    "df_ml_skills.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/10_tableau_analysis_ml_skills.xlsx',index=False)\n"
+    "df_ml_skills.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/10_tableau_analysis_ml_skills.xlsx',index=False)\n"
    ]
   },
   {
@@ -3891,7 +3891,7 @@
     "\n",
     "df_deep_learning_skills = df_deep_learning_skills[['text_id','object_detection', 'convolutional_neural', 'keras_tensorflow', 'neural_network', 'deep_learning']]\n",
     "\n",
-    "df_deep_learning_skills.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/11_tableau_analysis_deep_learning_skills.xlsx',index=False)"
+    "df_deep_learning_skills.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/11_tableau_analysis_deep_learning_skills.xlsx',index=False)"
    ]
   },
   {
@@ -3949,7 +3949,7 @@
     "\n",
     "df_languages_required = df_languages_required[['text_id','english', 'french', 'spanish', 'german', 'italian', 'portuguese', 'russian', 'chinese', 'japanese', 'ukrainian', 'arabic', 'hebrew']]\n",
     "\n",
-    "df_languages_required.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/12_tableau_analysis_languages_required.xlsx',index=False)\n"
+    "df_languages_required.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/12_tableau_analysis_languages_required.xlsx',index=False)\n"
    ]
   },
   {
@@ -4046,7 +4046,7 @@
     "                                                'project_scheduling', 'project_budgeting']]\n",
     "\n",
     "\n",
-    "df_projectsmanagement_skills_and_methodologies.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/13_tableau_analysis_project_management_skills_and_methodologies.xlsx',index=False)"
+    "df_projectsmanagement_skills_and_methodologies.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/13_tableau_analysis_project_management_skills_and_methodologies.xlsx',index=False)"
    ]
   },
   {
