--- a/04_Analysis/04_02_ensi_skills_extraction/04_02_create_ensi_db.ipynb
+++ b/04_Analysis/04_02_ensi_skills_extraction/04_02_create_ensi_db.ipynb
@@ -536,7 +536,7 @@
    "source": [
     "# This code reads in a dataset from a CSV file, and then displays the first five rows of data from that dataset.\n",
     "\n",
-    "df = pd.read_excel(\"C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/01_tableau_base_data_geocoded.xlsx\")\n",
+    "df = pd.read_excel(\"Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/01_tableau_base_data_geocoded.xlsx\")\n",
     "df.head(5)"
    ]
   },
@@ -926,7 +926,7 @@
    "source": [
     "# The code reads in a CSV file of all skills, prints the dimensions of the dataframe, and displays the first 5 rows.\n",
     "\n",
-    "all_skills = pd.read_csv('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_ensi_skills_extraction/04_all_ensi_skills_ids.csv')\n",
+    "all_skills = pd.read_csv('Master/04_Analysis/04_ensi_skills_extraction/04_all_ensi_skills_ids.csv')\n",
     "print(all_skills.shape)\n",
     "all_skills.head(5)"
    ]
@@ -1071,13 +1071,13 @@
     "# This code reads in seven different CSV files, all of which presumably contain data on extracted skills. Each CSV file is assigned to a different variable, so that the data from each file can be accessed separately.\n",
     "\n",
     "\n",
-    "# ensi_1 = pd.read_csv('ensi_extracted_skills_1.csv')\n",
-    "# ensi_2 = pd.read_csv('ensi_extracted_skills_2.csv')\n",
-    "# ensi_3 = pd.read_csv('ensi_extracted_skills_3.csv')\n",
-    "# ensi_4 = pd.read_csv('ensi_extracted_skills_4.csv')\n",
-    "# ensi_5 = pd.read_csv('ensi_extracted_skills_5.csv')\n",
-    "# ensi_6 = pd.read_csv('ensi_extracted_skills_6.csv')\n",
-    "# ensi_7 = pd.read_csv('ensi_extracted_skills_7.csv')\n"
+    "ensi_1 = pd.read_csv('ensi_extracted_skills_1.csv')\n",
+    "ensi_2 = pd.read_csv('ensi_extracted_skills_2.csv')\n",
+    "ensi_3 = pd.read_csv('ensi_extracted_skills_3.csv')\n",
+    "ensi_4 = pd.read_csv('ensi_extracted_skills_4.csv')\n",
+    "ensi_5 = pd.read_csv('ensi_extracted_skills_5.csv')\n",
+    "ensi_6 = pd.read_csv('ensi_extracted_skills_6.csv')\n",
+    "ensi_7 = pd.read_csv('ensi_extracted_skills_7.csv')\n"
    ]
   },
   {
@@ -1088,8 +1088,8 @@
    "source": [
     "# The code is creating a database of ensi skills by concatenating several smaller databases together. The final database is then exported to a CSV file.\n",
     "\n",
-    "# ensi_skills_db = pd.concat([ensi_1,ensi_2,ensi_3,ensi_4,ensi_5,ensi_6,ensi_7])\n",
-    "# ensi_skills_db.to_csv('04_ensi_skills_db.csv',index=False)"
+    "ensi_skills_db = pd.concat([ensi_1,ensi_2,ensi_3,ensi_4,ensi_5,ensi_6,ensi_7])\n",
+    "ensi_skills_db.to_csv('Master/04_02_ensi_skills_extraction/04_ensi_skills_db.csv',index=False)"
    ]
   }
  ],
