--- a/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_skills_extractor_skillner_ner.ipynb
+++ b/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_skills_extractor_skillner_ner.ipynb
@@ -220,7 +220,7 @@
     "# sort_values(): pandas function for sorting DataFrames\n",
     "\n",
     "\n",
-    "df = pd.read_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/01_tableau_base_data_geocoded.xlsx')\n",
+    "df = pd.read_excel('Master/04_Analysis/04_01_custom_analysis/04_01_02_tableau_data/01_tableau_base_data_geocoded.xlsx')\n",
     "df = df.sort_values(by=['text_id'])\n",
     "df.head(5)"
    ]
@@ -514,7 +514,7 @@
     "\n",
     "df_exatracted_skills = pd.concat(data_full)\n",
     "\n",
-    "df_exatracted_skills.to_parquet('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_01_skillner_extracted_skills_final.parquet', engine='fastparquet')"
+    "df_exatracted_skills.to_parquet('Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_01_skillner_extracted_skills_final.parquet', engine='fastparquet')"
    ]
   },
   {
@@ -614,7 +614,7 @@
    "source": [
     "# This code reads in a Parquet file containing  job descriptions to be normalized and displays the first 5 rows.\n",
     "\n",
-    "normalizing_df_full = pd.read_parquet('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_01_skillner_extracted_skills_final.parquet')\n",
+    "normalizing_df_full = pd.read_parquet('Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_01_skillner_extracted_skills_final.parquet')\n",
     "\n",
     "normalizing_df_full.head(5)"
    ]
@@ -1010,9 +1010,9 @@
     "# 3. Finally, it reads in a CSV file called 'enski_skills_db' and assigns it to a variable called 'enski_skills_db'\n",
     "\n",
     "\n",
-    "normalized_df_full.to_parquet('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_02_normalized_df_full_final.parquet',engine='fastparquet')\n",
-    "found_skills = pd.read_parquet('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_02_normalized_df_full_final.parquet')\n",
-    "enski_skills_db = pd.read_csv('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_02_ensi_skills_extraction/04_02_ensi_skills_db.csv')"
+    "normalized_df_full.to_parquet('Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_02_normalized_df_full_final.parquet',engine='fastparquet')\n",
+    "found_skills = pd.read_parquet('Master/04_Analysis/04_03_extracting_skills_with_skillner_ner/04_03_02_normalized_df_full_final.parquet')\n",
+    "enski_skills_db = pd.read_csv('Master/04_Analysis/04_02_ensi_skills_extraction/04_02_ensi_skills_db.csv')"
    ]
   },
   {
@@ -1922,7 +1922,7 @@
     "# Saves the dataframe as an Excel file\n",
     "\n",
     "\n",
-    "found_skills_for_tableau.to_excel('C:/Users/Aleksej Aikov/Desktop/Enablement/Master/04_Analysis/04_01_custom_analysis/04_01_tableau_data/14_tableau_analysis_ensi_skills_lost.xlsx', index=False) "
+    "found_skills_for_tableau.to_excel('Master/04_Analysis/04_01_custom_analysis/04_01_tableau_data/14_tableau_analysis_ensi_skills_lost.xlsx', index=False) "
    ]
   }
  ],
